Change rawParams to unmodifiable list implementation
Why

We need to support null arguments as well.

Task: 12389

Co-authored-by: Copilot Autofix powered by AI <175728472+Copilot@users.noreply.github.com>